fix: align items in page

--- a/_sass/imports/_product_grid.scss
+++ b/_sass/imports/_product_grid.scss
@@ -44,7 +44,7 @@
 
   &__item-image {
     width: 100%;
-    height: auto;
+    height: 315px;
     background-size: cover;
     border-radius: $spacing--unit * 3;
     position: relative;
